Sun Feb 25 21:27:25 2001  George Lebl <jirka@5z.com>

	* tasklist_applet.c: Use destroy not unref for menu, since it needs
	  to be actually destroyed in case there was another refcount.  When
	  a task is destroyed, set the "task" data on the menuitem to NULL,
	  and hide it.  (destroying makes thing go nuts a bit)

	* tasklist_menu.c: handle cases where "task" is NULL, and make sure
	  to update ->menuitem on task after the item is destroyed.  Also
	  don't leak the pixmaps

2001-02-14  Anders Carlsson  <andersca@codefactory.se>

	* tasklist_menu.c (do_action): Don't segfault when trying to
	kill programs that have already been killed once. 
	This fixes bugzilla bug #10874.

Tue Feb 13 05:00:44 2001  George Lebl <jirka@5z.com>

	* tasklist_menu.c: make sure menu doesn't go off screen.

Mon Feb 12 21:25:33 2001  George Lebl <jirka@5z.com>

	* tasklist_applet.[ch], tasklist_menu.c, pixmaps.h: Remove some
	  unused code, fix warnings, remove function casts (they are evil)
	  and add wrappers instead.  Compiles without warning now.

	* tasklist_applet.c: In a fit of vanity, added self to the about box,
	  though at the bottom, so I don't feel like a total asshole.  While
	  I was looking through the function added my own touch of anality
	  and some null checking.

2001-02-04  Anders Carlsson  <andersca@codefactory.se>

	* tasklist_menu.c (cb_activate_task): Add function.
	(create_task_item): Make it possible to click-drag in a menu
	to activate a task.

	* tasklist_applet.c (real_layout_tasklist): If width > specified,
	set width = specified.

2001-01-30  jacob berkman  <jacob@ximian.com>

	* tasklist_menu.c (tasklist_group_popup):
	(create_task_item): add a seperator to the menu; tasks on the
	current desktop are before, tasks not on after (like that foobar
	task list)

2001-01-24  jacob berkman  <jacob@ximian.com>

	* tasklist*.[ch]: add shlibification and grouping by wmclass

2000-12-21  Richard Hult  <rhult@codefactory.se>
